--- a/index.html
+++ b/index.html
@@ -4,39 +4,38 @@
     <meta charset="utf-8">
     <title>GRUDE - PB</title>
     <link rel="stylesheet" href="css/style_base.css">
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
     <header>
       <div class="cabecalho">
-        <img src="img/grude_logo.png" alt="" class="logo">
-        <img src="img/slack_invite.png" alt="" class="slack">
-        <ul class="menu">
-          <li class="menu-item"><a href="">Home</a></li>
-          <li class="menu-item"><a href="">Noticias</a></li>
-          <li class="menu-item"><a href="">Publicações</a></li>
-          <li class="menu-item"><a href="">Agenda</a></li>
-          <li class="menu-item"><a href="">Sobre</a></li>
-          <li class="menu-item"><a href="">Contato</a></li>
-        </ul>
-      </div>
-      <div id="slideshow" class="slide-show">
-        <img src="img/game_developer.png" alt="">
-        <img src="img/img-massa.jpg" alt="">
-        <img src="img/outraimgmassa.jpeg" alt="">
+        <div class="menu">
+          <ul>
+            <li class="menu-item"><a href="">Home</a></li>
+            <li class="menu-item"><a href="">Noticias</a></li>
+            <li class="menu-item"><a href="">Publicações</a></li>
+            <li class="menu-item"><a href="">Agenda</a></li>
+            <li class="menu-item"><a href="">Sobre</a></li>
+            <li class="menu-item"><a href="">Contato</a></li>
+          </ul>
+        </div>
+        <div class="centro">
+          <span class="chaves">{</span>
+          <div class="apresentação">
+            <img src="img/logo.jpg" alt="Logo do Grude"><br>
+            <p>O Grude-PB é uma comunidade de desenvolvedores da Paraiba, onde reune diversas comunidades, como JampaRuby, PHP-Pb, PUG-PB e etc. Acesse nosso slack.</p>
+            <ul class="comunidades">
+              <li class="comunidade">Grude-PB</li>
+              <li class="comunidade">Hora Extra</li>
+              <li class="comunidade">PHP-PB</li>
+              <li class="comunidade">JampaRuby</li>
+              <li class="comunidade">PUG-PB</li>
+            </ul>
+          </div>
+          <span class="chaves">}</span>
+        </div>
       </div>
     </header>
   </body>
-  <script type="text/javascript">
-  $("#slideshow > img:gt(0)").hide();
-
-  setInterval(function() {
-  $('#slideshow > img:first')
-    .fadeOut(1000)
-    .next()
-    .fadeIn(1000)
-    .end()
-    .appendTo('#slideshow');
-  }, 3000);
-  </script>
 </html>
