--- a/index.html
+++ b/index.html
@@ -5,65 +5,64 @@
     <title>GRUDE - PB</title>
     <link rel="stylesheet" href="css/hover.min.css">
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="css/slick-theme.css"/>
     <link rel="stylesheet" href="css/style_base.css">
+    <link rel="stylesheet" href="css/menu.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
   </head>
   <body>
     <header>
-      <div class="cabecalho">
-        <div class="menu">
-          <img src="img/logo.jpg" alt="Logo do Grude">
-          <ul>
+      <nav class="menu">
+        <img src="img/logo.jpg" alt="Logo do Grude">
+        <a id="nav-menu" class="nav-menu"><i class="fa fa-bars" aria-hidden="true"></i> Menu</a>
+        <div class="menu-container">
+          <ul class="menu-lista" id="menu">
             <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="index.html">Home</a></li>
             <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="noticias.html">Notícias</a></li>
-            <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="">Publicações</a></li>
-            <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="">Agenda</a></li>
-            <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="">Sobre</a></li>
             <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="">Contato</a></li>
           </ul>
         </div>
-        <div class="centro">
-          <span class="chaves prev hvr-grow">{</span>
-            <div class="apresentação">
-              <div id="slide">
-                <div>
-                  <img src="img/logo.jpg" alt="Logo do Grude">
-                  <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
-                </div>
-                <div>
-                  <img src="img/horaextra.jpeg" alt="Logo do Hora Extra">
-                  <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
-                </div>
-                <div>
-                  <img src="img/php-pb.svg" alt="Logo do PHP-PB">
-                  <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
-                </div>
-                <div>
-                  <img src="img/jamparuby.jpeg" alt="Logo do Jampa Ruby">
-                  <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
-                </div>
-                <div>
-                  <img src="img/pug-pb.png" alt="Logo do PUG-PB">
-                  <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
-                </div>
+      </nav>
+      <div class="centro">
+        <span class="chaves prev hvr-grow">{</span>
+          <div class="apresentação">
+            <div id="slide">
+              <div>
+                <img src="img/logo.jpg" alt="Logo do Grude">
+                <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
               </div>
-              <ul class="comunidades">
-                <li class="comunidade"><a class="hvr-grow">Grude-PB</a></li>
-                <li class="comunidade"><a class="hvr-grow">Hora Extra</a></li>
-                <li class="comunidade"><a class="hvr-grow">PHP-PB</a></li>
-                <li class="comunidade"><a class="hvr-grow">JampaRuby</a></li>
-                <li class="comunidade"><a class="hvr-grow">PUG-PB</a></li>
-              </ul>
+              <div>
+                <img src="img/horaextra.jpeg" alt="Logo do Hora Extra">
+                <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
+              </div>
+              <div>
+                <img src="img/php-pb.svg" alt="Logo do PHP-PB">
+                <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
+              </div>
+              <div>
+                <img src="img/jamparuby.jpeg" alt="Logo do Jampa Ruby">
+                <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
+              </div>
+              <div>
+                <img src="img/pug-pb.png" alt="Logo do PUG-PB">
+                <p>O Grude-PB é uma comunidade de desenvolvedores da Paraíba, onde reúne diversas comunidades, como JampaRuby, PHP-PB, PUG-PB e etc. Acesse nosso slack.</p>
+              </div>
             </div>
-            <span class="chaves next hvr-grow">}</span>
+            <ul class="comunidades">
+              <li class="comunidade"><a class="hvr-grow">Grude-PB</a></li>
+              <li class="comunidade"><a class="hvr-grow">Hora Extra</a></li>
+              <li class="comunidade"><a class="hvr-grow">PHP-PB</a></li>
+              <li class="comunidade"><a class="hvr-grow">JampaRuby</a></li>
+              <li class="comunidade"><a class="hvr-grow">PUG-PB</a></li>
+            </ul>
+          </div>
+          <span class="chaves next hvr-grow">}</span>
         </div>
-      </div>
     </header>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="js/slick.min.js"></script>
+  <script type="text/javascript" src="js/menu.js"></script>
   <script type="text/javascript">
     $('#slide').slick({
       prevArrow: $('.prev'),
