--- a/noticias.html
+++ b/noticias.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Notícias</title>
+  <link rel="stylesheet" href="css/hover.min.css">
   <link rel="stylesheet" href="css/style_noticias.css">
+  <link rel="stylesheet" href="css/menu.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
 </head>
@@ -12,14 +14,17 @@
 <body>
   <header>
     <div class="cabecalho">
-      <ul class="menu">
-        <li class="menu-item"><a href="index.html">Home</a></li>
-        <li class="menu-item"><a href="noticias.html">Noticias</a></li>
-        <li class="menu-item"><a href="">Publicações</a></li>
-        <li class="menu-item"><a href="">Agenda</a></li>
-        <li class="menu-item"><a href="">Sobre</a></li>
-        <li class="menu-item"><a href="contato.html">Contato</a></li>
-      </ul>
+      <nav class="menu">
+        <img src="img/logo.jpg" alt="Logo do Grude">
+        <a id="nav-menu" class="nav-menu"><i class="fa fa-bars" aria-hidden="true"></i> Menu</a>
+        <div class="menu-container">
+          <ul class="menu-lista" id="menu">
+            <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="index.html">Home</a></li>
+            <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="noticias.html">Notícias</a></li>
+            <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="">Contato</a></li>
+          </ul>
+        </div>
+      </nav>
     </div>
   </header>
   <main>
@@ -28,7 +33,7 @@
     <div class="noticias">
       <div class="noticia ruby">
         <img src="img/css3.jpg" alt="">
-        <div>
+        <div class="conteudo">
           <h2>Título da notícia</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -37,7 +42,7 @@
       </div>
       <div class="noticia phppb">
         <img src="img/css3.jpg" alt="">
-        <div>
+        <div class="conteudo">
           <h2>Título da notícia</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -46,7 +51,7 @@
       </div>
       <div class="noticia horaextra">
         <img src="img/css3.jpg" alt="">
-        <div>
+        <div class="conteudo">
           <h2>Título da notícia</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -55,7 +60,7 @@
       </div>
       <div class="noticia grudepb">
         <img src="img/css3.jpg" alt="">
-        <div>
+        <div class="conteudo">
           <h2>Título da notícia</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
             irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -86,13 +91,12 @@
       </div>
       <div class="subtitle contact">
         <h2>Contato</h2>
-        <p>Alguma coisa aqui</p>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d679.9452129279463!2d-34.82391057365419!3d-7.119320724202707!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7acdd28cfa496b7%3A0x5bee687a9ae9c5b!2sBusto+de+Tamandar%C3%A9!5e0!3m2!1spt-BR!2sbr!4v1503538715555"
-          width="300" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <p>TEL: (83)0110-0001</p>
       </div>
     </div>
     </div>
   </footer>
 </body>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/menu.js"></script>
 </html>
