Link da pagina contato

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <ul class="menu-lista" id="menu">
             <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="index.html">Home</a></li>
             <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="noticias.html">Notícias</a></li>
-            <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="">Contato</a></li>
+            <li class="menu-item"><a class="hvr-underline-from-center hvr-grow" href="contato.html">Contato</a></li>
           </ul>
         </div>
       </nav>
